--- a/app/FrappuccinoParadise/templates/registration/logged_out.html
+++ b/app/FrappuccinoParadise/templates/registration/logged_out.html
@@ -1,4 +1,5 @@
 {% block content %}
+{% csrf_token %}
   <p>Logged out!</p>
   <a href="{% url 'login'%}">Click here to login again.</a>
 {% endblock %}
